[gd_scene load_steps=4 format=3 uid="uid://cdv3yoxlvhgw6"]

[ext_resource type="PackedScene" uid="uid://d2xk517xfoakm" path="res://Scenes/kill_zone.tscn" id="1_ugtcb"]
[ext_resource type="Script" uid="uid://diap0tfjqmjb8" path="res://Scripts/goombav2.gd" id="1_wqi4q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wqi4q"]
radius = 44.011364

[node name="Goomba" type="Node2D"]
script = ExtResource("1_wqi4q")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.72117347, 0.29996288, 0.21128711, 1)
polygon = PackedVector2Array(-53, 27, 1, -50, 53, 27)

[node name="KillZone" parent="." instance=ExtResource("1_ugtcb")]
position = Vector2(-1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_wqi4q")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(40, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(-40, 0)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-54, 0)
target_position = Vector2(0, 91)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(57, 0)
target_position = Vector2(0, 91)
